--- a/src/global.scss
+++ b/src/global.scss
@@ -37,6 +37,7 @@
   --header-height: 0px;
   --ion-text-color: var(--ion-color-dark, #000);
   --ion-background-color: var(--ion-color-secondary);
+  --ion-font-family: "Roboto", sans-serif;
 }
 
 ion-title p {
