--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,8 @@
       
     </ion-content>
   </ion-menu>
-  <app-loading-overlay *ngIf="isLoading$ | async"></app-loading-overlay>
+  <app-loading-overlay *ngIf="(isLoading$ | async) || !isAuthCheckComplete || isLoggedIn && !(user$ | async)"></app-loading-overlay>
+
   <ion-router-outlet id="main-content"></ion-router-outlet>
 
 </ion-split-pane>
