--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,13 +1,16 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-img
-      slot="start"
-      class="logo"
-      src="../../../../assets/images/humster_sm.png"
-    ></ion-img>
-    <ion-title class="title">
-      <div class="title-main">Cookster</div>
-      <div class="title-sub">Organize your cooking!</div>
+    <ion-title>
+      <div class="main-header">
+        <ion-img
+          class="logo"
+          src="../../../../assets/images/humster_sm.png"
+        ></ion-img>
+        <div class="title">
+          <div class="title-main">Cookster</div>
+          <div class="title-sub">Organize your cooking!</div>
+        </div>
+      </div>
     </ion-title>
   </ion-toolbar>
   <ion-toolbar>
