--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -80,18 +80,19 @@
 
     <div class="actions-pane">
       <ion-button (click)="goFullRecipy()">
-        <ion-icon slot="start" name="star"></ion-icon>
+        
         Перейти до рецепту
       </ion-button>
       <ion-button *ngIf="currentUser" (click)="showCollections()">
-        <ion-icon slot="start" name="star"></ion-icon>
+        
         Колекції
       </ion-button>
     </div>
   </div>
   <div class="overlay collections" [class.visible]="isShowCollections">
-    <ion-list lines="none">
+    <ion-list>
       <ion-item
+      color="tertiary"
         *ngFor="let collection of recipyCollections"
         (click)="onCollectionSelected(collection)"
       >
@@ -100,7 +101,7 @@
           {{ collection }}</ion-label
         >
       </ion-item>
-      <ion-item (click)="addCollection()">
+      <ion-item (click)="addCollection()" color="tertiary">
         <ion-label> + Додати колекцію </ion-label>
       </ion-item>
     </ion-list>
