--- a/src/app/pages/planner/planner.page.html
+++ b/src/app/pages/planner/planner.page.html
@@ -1,5 +1,6 @@
 <app-header>
   <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
+  <p title>Планер</p>
 </app-header>
 
 <ion-content [fullscreen]="true">
