--- a/src/app/pages/calendar/components/calendar-core/calendar-core.component.html
+++ b/src/app/pages/calendar/components/calendar-core/calendar-core.component.html
@@ -38,4 +38,7 @@
       [day]="_day"
     ></app-advance-preparation>
   </ng-container>
+  <ng-container *ngIf="currentTab === tabs[2].value">
+    <app-products-per-day *ngIf="!!_day" [day]="_day"></app-products-per-day>
+  </ng-container>
 </div>
