--- a/src/app/pages/admin/pages/products/products.component.html
+++ b/src/app/pages/admin/pages/products/products.component.html
@@ -1,5 +1,4 @@
-<app-header>
-  <ion-back-button left-button defaultHref="tabs/admin"></ion-back-button>
+<app-header [isShowBackButton]="true">  
   <span title>Продукти</span>
 </app-header>
 
