--- a/src/app/pages/planner/planner.page.html
+++ b/src/app/pages/planner/planner.page.html
@@ -1,5 +1,4 @@
-<app-header>
-  <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
+<app-header [isShowBackButton]="true">
   <p title>Планер</p>
 </app-header>
 
