--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,8 +1,4 @@
-<app-header>
-  <ion-back-button
-    left-button
-    defaultHref="tabs/recipies"
-  ></ion-back-button>
+<app-header [isShowBackButton]="true">
   <span title>Адмін панель</span>
 </app-header>
 
