--- a/src/app/pages/admin/pages/update-products/update-products.component.html
+++ b/src/app/pages/admin/pages/update-products/update-products.component.html
@@ -1,8 +1,4 @@
-<app-header>
-  <ion-back-button
-    left-button
-    defaultHref="tabs/admin"
-  ></ion-back-button>
+<app-header [isShowBackButton]="true">
   <span title>Редагування продуктів</span>
 </app-header>
 
