--- a/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
+++ b/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
@@ -1,5 +1,4 @@
-<app-header>
-  <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
+<app-header [isShowBackButton]="true">
   <p title>{{ (recipy$ | async)!.name }}</p>
 </app-header>
 
