--- a/src/app/pages/draft-recipies/pages/edit-draft/edit-draft.component.html
+++ b/src/app/pages/draft-recipies/pages/edit-draft/edit-draft.component.html
@@ -1,8 +1,4 @@
-<app-header>
-  <ion-back-button
-    left-button
-    defaultHref="tabs/draft-recipies"
-  ></ion-back-button>
+<app-header [isShowBackButton]="true">
   <span title>Редагування рецепту</span>
 </app-header>
 
