--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -1,4 +1,8 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button
+    left-button
+    defaultHref="tabs/recipies"
+  ></ion-back-button>
   <span title>Адмін панель</span>
 </app-header>
 
