--- a/src/app/pages/admin/pages/density-calc/density-calc.component.html
+++ b/src/app/pages/admin/pages/density-calc/density-calc.component.html
@@ -1,5 +1,6 @@
-<app-header [isShowBackButton]="true">
-    <span title>Калькулятор щільності</span>
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/admin"></ion-back-button>
+  <span title>Калькулятор щільності</span>
 </app-header>
 
 <ion-content [fullscreen]="true">
