--- a/src/app/pages/draft-recipies/pages/edit-draft/edit-draft.component.html
+++ b/src/app/pages/draft-recipies/pages/edit-draft/edit-draft.component.html
@@ -1,4 +1,8 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button
+    left-button
+    defaultHref="tabs/draft-recipies"
+  ></ion-back-button>
   <span title>Редагування рецепту</span>
 </app-header>
 
