--- a/src/app/pages/planner/pages/planner-core/planner-core.component.html
+++ b/src/app/pages/planner/pages/planner-core/planner-core.component.html
@@ -1,4 +1,5 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/planner"></ion-back-button>
   <ion-segment title [value]="currentTab" (ionChange)="onTabChange($event)">
     <ion-segment-button [value]="tab.name" *ngFor="let tab of tabs">
       <ion-icon [name]="tab.icon"></ion-icon>
