--- a/src/app/pages/planner/planner.page.html
+++ b/src/app/pages/planner/planner.page.html
@@ -1,4 +1,5 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
   <p title>Планер</p>
 </app-header>
 
