--- a/src/app/pages/admin/pages/add-product/add-product.component.html
+++ b/src/app/pages/admin/pages/add-product/add-product.component.html
@@ -1,4 +1,5 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/admin"></ion-back-button>
   <span title>Додати продукт</span>
 </app-header>
 
