--- a/src/app/pages/admin/pages/update-products/update-products.component.html
+++ b/src/app/pages/admin/pages/update-products/update-products.component.html
@@ -1,4 +1,8 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button
+    left-button
+    defaultHref="tabs/admin"
+  ></ion-back-button>
   <span title>Редагування продуктів</span>
 </app-header>
 
