--- a/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
+++ b/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
@@ -1,4 +1,5 @@
-<app-header [isShowBackButton]="true">
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
   <p title>{{ (recipy$ | async)!.name }}</p>
 </app-header>
 
