fixed routing for admin pages

--- a/src/app/pages/admin/pages/recipies-comments/recipies-comments.component.html
+++ b/src/app/pages/admin/pages/recipies-comments/recipies-comments.component.html
@@ -1,7 +1,7 @@
 <app-header>
   <ion-back-button
     left-button
-    defaultHref="tabs/admin"
+    defaultHref="tabs/recipies"
   ></ion-back-button>
   <span title>Коментарі до рецептів</span>
 </app-header>
