--- a/src/app/pages/admin/pages/recipies/recipies.component.html
+++ b/src/app/pages/admin/pages/recipies/recipies.component.html
@@ -1,5 +1,5 @@
 <app-header>
-  <ion-back-button left-button defaultHref="tabs/admin"></ion-back-button>
+  <ion-back-button left-button defaultHref="tabs/recipies"></ion-back-button>
   <span title>Рецепти</span>
 </app-header>
 
