date and mealtime header in add recipy to calendar modal

--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -13,6 +13,8 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
+      <h6>{{date.toString() | date : "EE, MMM d"}}, {{mealtimeText.toLowerCase()}}</h6>
+
       <ng-container *ngIf="!(collectionSelected$ | async)">
         <ion-list>
           <ion-item
