--- a/src/app/pages/calendar/components/calendar-meal/calendar-meal.component.html
+++ b/src/app/pages/calendar/components/calendar-meal/calendar-meal.component.html
@@ -38,6 +38,7 @@
   <app-add-recipy-modal
     *ngIf="addRecipies"
     [meatime]="mealtime"
+    [date]="day.details.day"
     (recipyToAdd)="onRecipySelected($event)"
   ></app-add-recipy-modal>
   <app-select-option-dialog #selectOption></app-select-option-dialog>
