short recipy adjustments

--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.scss
@@ -29,10 +29,12 @@ ion-card-content {
   transition: all 200ms ease-in-out;
   background-color: var(--ion-color-tertiary);
   padding: 10px;
-  & > div {
+  & > div:not(.ingredients-wrapper) {
     margin-bottom: 5px;
     display: flex;
     align-items: center;
+    font-size: 10px;
+    line-height: 1.2;
     ion-icon {
       margin-right: 5px;
     }
@@ -46,7 +48,7 @@ ion-card-content {
       opacity: 0;
       transition: all 300ms ease-in-out;
 
-      &>ion-button {
+      & > ion-button {
         width: 45%;
       }
     }
@@ -77,8 +79,22 @@ ion-card-content {
 }
 
 .ingredients-wrapper {
-  padding-inline: 20px;
-  padding-bottom: 0;
+  &.no-photo {
+    padding-inline: 20px;
+    padding-bottom: 0;
+  }
+  &:not(.no-photo){
+    h6{
+      margin-top: 15px;
+      font-size: 11px;
+      font-weight: 600;      
+    }
+    div {
+      font-size: 10px;
+      font-weight: normal;
+    }
+  }
+
   h6 {
     margin-block: 5px;
   }
@@ -87,7 +103,6 @@ ion-card-content {
     flex-direction: column;
     font-size: 12px;
     font-weight: 600;
-    
   }
 }
 
