--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -33,7 +33,7 @@
 
   <ion-card-content>
     <app-image *ngIf="recipy.photo" [imagePath]="recipy.photo"></app-image>
-    <div *ngIf="!recipy.photo" class="ingredients-wrapper">
+    <div *ngIf="!recipy.photo" class="ingredients-wrapper no-photo">
       <h6>Основні інгридієнти</h6>
       <div>
         <ng-container *ngFor="let ingredient of topIngredients">
@@ -53,16 +53,6 @@
         >потребує попередньої підготовки</span
       >
     </div>
-    <div class="time">
-      <span>
-        <ion-icon name="american-football-outline"></ion-icon>
-        {{ activePreparationTime() | normalizeTime }}
-      </span>
-      <span>
-        <ion-icon name="beer-outline"></ion-icon>
-        {{ passivePreparationTime() | normalizeTime }}
-      </span>
-    </div>
     <div>{{ complexity }} рецепт</div>
     <div class="advance-prep" *ngIf="isPrepSuggestions">
       <ion-icon name="bulb"></ion-icon> дещо можна приготувати заздалегіть
@@ -76,6 +66,16 @@
     </div>    
     <div>
       Автор: {{ recipy.author }}
+    </div>
+    <div *ngIf="recipy.photo" class="ingredients-wrapper">
+      <h6>Основні інгридієнти</h6>
+      <div>
+        <ng-container *ngFor="let ingredient of topIngredients">
+          <span class="ingredient-text">{{
+            getIngredientText(ingredient).toLowerCase()
+          }}</span>
+        </ng-container>
+      </div>
     </div>
 
     <div class="actions-pane">
