--- a/src/app/pages/calendar/components/products-per-day/products-per-day.component.html
+++ b/src/app/pages/calendar/components/products-per-day/products-per-day.component.html
@@ -3,5 +3,9 @@
     *ngFor="let product of products"
     [ingredient]="product"
     [coefficient]="1"
-  ></app-ingredient>
+  >
+    <ion-button class="add-to-shopping-list" action-buttons size="small" (click)="addToList(product)"
+      ><ion-icon name="add" slot="icon-only"></ion-icon
+    ></ion-button>
+  </app-ingredient>
 </ion-list>
