shopping list bug

--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -101,9 +101,9 @@
           {{ collection }}</ion-label
         >
       </ion-item>
-      <ion-item (click)="addCollection()" color="tertiary">
+      <!-- <ion-item (click)="addCollection()" color="tertiary">
         <ion-label> + Додати колекцію </ion-label>
-      </ion-item>
+      </ion-item> -->
     </ion-list>
   </div>
 </ion-card>
