--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.scss
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.scss
@@ -65,6 +65,12 @@ ion-card-content {
     height: 260px;
     z-index: 2;
 
+    &.collections {
+      ion-list {
+        padding-block: 0;
+      }
+    }
+
     & > div.actions-pane {
       opacity: 1;
     }
@@ -83,11 +89,11 @@ ion-card-content {
     padding-inline: 20px;
     padding-bottom: 0;
   }
-  &:not(.no-photo){
-    h6{
+  &:not(.no-photo) {
+    h6 {
       margin-top: 15px;
       font-size: 11px;
-      font-weight: 600;      
+      font-weight: 600;
     }
     div {
       font-size: 10px;
