--- a/src/app/pages/shopping-list/shopping-list.page.html
+++ b/src/app/pages/shopping-list/shopping-list.page.html
@@ -32,7 +32,7 @@
                     (itemSwiped)="onSwiped(item, list.name)"
                   >
                     <ion-label>{{item.title}}</ion-label>
-                    <ion-chip>{{ getAmountInList(item) }}</ion-chip>
+                    <ion-chip>{{ item.amount }}</ion-chip>
                   </ion-item>
                 </ng-container>
               </ion-list>
