--- a/src/app/shared/components/recipy-constructor/add-ingredient/add-ingredient.component.html
+++ b/src/app/shared/components/recipy-constructor/add-ingredient/add-ingredient.component.html
@@ -1,9 +1,6 @@
 <div class="ng-autocomplete">
-  <app-product-autocomplete
-    #autocomplete
-    [products]="data"
-    (productSelected)="selectEvent($event)"
-  ></app-product-autocomplete>
+  <app-product-autocomplete #autocomplete [products]="data"
+    (productSelected)="selectEvent($event)"></app-product-autocomplete>
 
   <ion-item>
     <ion-label position="floating">Кількість</ion-label>
@@ -35,18 +32,13 @@
             <ion-radio slot="end" [value]="group"></ion-radio>
           </ion-item>
           <ion-item button>
-            <app-input-dialog
-              [inputFieldLabel]="'Введіть назву групи'"
-              [buttonText]="'Додати нову групу'"
-              (resultReceived)="onGroupName($event)"
-            ></app-input-dialog>
+            <app-input-dialog [id]="'ingred'" [inputFieldLabel]="'Введіть назву групи'"
+              [buttonText]="'Додати нову групу'" (resultReceived)="onGroupName($event)"></app-input-dialog>
           </ion-item>
         </ion-radio-group>
       </div>
     </ion-accordion>
   </ion-accordion-group>
 
-  <ion-button expand="full" [disabled]="isAddDisabled" (click)="addIngredient()"
-    >Додати</ion-button
-  >
+  <ion-button expand="full" [disabled]="isAddDisabled" (click)="addIngredient()">Додати</ion-button>
 </div>
