ui/ux improvements: all recipies page

--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -2,7 +2,7 @@
   <ion-icon slot="icon-only" name="filter-outline"></ion-icon>
 </ion-button>
 
-<ion-modal trigger="filters-modal">
+<ion-modal trigger="filters-modal" [initialBreakpoint]="0.5" [breakpoints]="[0, 0.5, 0.75]">
   <ng-template>
     <ion-header>
       <ion-toolbar>
