--- a/src/app/filters/components/search-recipies-filter/search-recipies-filter.component.html
+++ b/src/app/filters/components/search-recipies-filter/search-recipies-filter.component.html
@@ -1,5 +1,6 @@
 <ion-searchbar
-  placeholder="Пошук рецептів за назвою"
+class="searchbar"
+  placeholder="Пошук за назвою"
   show-clear-button="always"
   [debounce]="500"
   (ionChange)="onSearch($event)"
