--- a/src/app/shared/components/loading-overlay/loading-overlay.component.html
+++ b/src/app/shared/components/loading-overlay/loading-overlay.component.html
@@ -1,10 +1,13 @@
-<ion-img
-  class="humster"
-  src="../../../../assets/images/humster_sm.png"
-></ion-img>
+<ion-img class="humster" src="../../../../assets/images/humster_sm.png"></ion-img>
 <div class="title">
   <div class="title-main">Cookster</div>
   <div class="title-sub">Organize your cooking!</div>
 </div>
 
+
 <img src="../../../../assets/images/curve-loading.gif" />
+<div class="status">
+  <p><ion-icon [name]="isUserLoaded? 'checkmark-outline': 'cloud-download-outline'"></ion-icon> профіль</p>
+  <p><ion-icon [name]="isRecipiesLoaded? 'checkmark-outline': 'cloud-download-outline'"></ion-icon> рецепти</p>
+  <p><ion-icon [name]="isProductsLoaded? 'checkmark-outline': 'cloud-download-outline'"></ion-icon> продукти</p>
+</div>
