--- a/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
+++ b/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
@@ -16,7 +16,7 @@
     </ion-item>
   </ng-container>
   <h3>Виберіть список:</h3>
-  <ion-list>
+  <ion-list class="lists-container">
     <ion-radio-group
       *ngIf="lists?.length"
       [value]="selectedList"
