--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,10 +21,10 @@
         <ion-label>Список покупок</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="planner">
+      <!-- <ion-tab-button tab="planner">
         <ion-icon name="briefcase-outline"></ion-icon>
         <ion-label>Планер</ion-label>
-      </ion-tab-button>    
+      </ion-tab-button>     -->
     </ng-container>
     <ng-container *ngIf="!(isLoggedIn$ | async)">
       <ion-tab-button tab="auth">
