reverted changes to default tab, fixed recipies with groups

--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -1,6 +1,6 @@
 <app-header>
   <span title>Заплановані рецепти</span>
-  <ion-button *ngIf="currentTab === 'menu'"  right-button (click)="togglePlannerMode()"><ion-icon slot="icon-only"
+  <ion-button right-button (click)="togglePlannerMode()"><ion-icon slot="icon-only"
       name="construct-outline"></ion-icon></ion-button>
 </app-header>
 
