--- a/src/app/pages/calendar/components/calendar-meal/calendar-meal.component.html
+++ b/src/app/pages/calendar/components/calendar-meal/calendar-meal.component.html
@@ -27,10 +27,18 @@
     </ng-container>
   </ng-container>
 
+  <ng-container *ngIf="isComments">
+    <ng-container *ngFor="let comment of _day.details.comments">
+      <ion-item *ngIf="comment.mealTime === mealtime" swipeLeftDelete
+      (deleteItem)="onDeleteComment(comment)">{{comment.comment}}</ion-item>
+    </ng-container>
+
+  </ng-container>
+
   <div class="action-buttons">
     <app-add-recipy-modal *ngIf="addRecipies" [meatime]="mealtime" [date]="day.details.day"
       (recipyToAdd)="onRecipySelected($event)"></app-add-recipy-modal>
-    <app-add-comment-modal *ngIf="addRecipies" [meatime]="mealtime" [date]="day.details.day"
+    <app-add-comment-modal #addCommentModal *ngIf="addRecipies" [meatime]="mealtime" [date]="day.details.day"
       (commentToAdd)="onAddComment($event)">
 
     </app-add-comment-modal>
