changed hardcoded colors to variables

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,3 +1,10 @@
+// fonts
+
 $robotoSlab: 'Roboto Slab', serif;
 $lobster: 'Lobster', cursive;
 $roboto: 'Roboto', sans-serif;
+
+// colors
+
+$orange: #FCD786;
+$rust: #3E1000;
