--- a/src/app/shared/components/loading-overlay/loading-overlay.component.scss
+++ b/src/app/shared/components/loading-overlay/loading-overlay.component.scss
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background: #FCD786;
+  background: variables.$orange;
   z-index: 100000;
   top: 0;
   display: flex;
@@ -22,7 +22,7 @@
 .title {
   text-align: center;
   margin: 14px auto;
-  color: #3E1000;
+  color: variables.$rust;
 
   &-main {
     font-family: variables.$lobster;
@@ -39,9 +39,9 @@
 }
 
 p {
-  font-family: 'Roboto', sans-serif;
+  font-family: variables.$roboto;
     font-size: 12px;
-    color: #3E1000;
+    color: variables.$rust;
     .ion-icon {
       font-size: 15px;
     }
