--- a/src/app/shared/components/loading-overlay/loading-overlay.component.scss
+++ b/src/app/shared/components/loading-overlay/loading-overlay.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   background: variables.$orange;
